fix bugs, realign with command line tool

--- a/stylesheets/dropdown.css
+++ b/stylesheets/dropdown.css
@@ -42,5 +42,5 @@
 }
 
 .schedule-input li {
-  width: 170px;
+  width: 120px;
 }
